
package acooo.onecenter;

option java_package = "cn.acooo.onecenter.core.auto";
option java_outer_classname = "OneCenterProtos";

//标识属于哪个模块，1000以内的id留给ui线程间的消息id
enum MessageType
{
    MSG_ID_LOGIN = 1000;//登陆，以及版本检查
	MSG_ID_APPS = 1100;//查询应用列表
	//MSG_ID_DOWNLOAD_APK = 1101;//下载apk
	MSG_ID_QUERY_CONTACTS = 1102;//查询联系人
}
message ContactsInfo{
	optional int64 id = 1;
	optional string name = 2;
	optional string number = 3;
	optional int32 type = 4;
	optional bytes icon = 5;
}
message CSQueryContacts{

}
message SCQueryContacts{
	repeated ContactsInfo infos = 1;
}

message ImageInfo{
	optional string name = 1;
	optional bytes image = 2;
}

message SCPushImage{
	optional ImageInfo imageInfo = 1;
}
message CSQueryApps{

}
message SCQueryApps{
	repeated AppInfo apps = 1;
}
message AppInfo{
	optional bytes icon = 1;
	optional string name = 2;
	optional string version = 3;
	optional string packageName = 4;
	optional int64 packageSize = 5;
	optional string publicSourceDir = 6;//APK下载路径
}

message Phone{
	required string imei = 1;
	optional string deviceType = 2;
}

message CSLogin{
	optional Phone phone = 1;
}
message SCLogin{
	optional int32 code = 1;
}
enum MessageCode
{
	SYS_NORMAL = 1;//正常的通信,非1的话就是有错误
	Err_Not_Known=1000;//
	Err_Money_NotEnough=1001;//
	Err_Power_NotEnough=1002;//
	Err_BattleSoul_NotEnough=1003;//
	Err_Diamond_NotEnough=1004;//
	
}
enum VersionStatus{
	PROHIBIT = 0;//禁止
	EXPIRE = 1;//过期
	NORMAL = 2;//正常
}
